--- a/css/README
+++ b/css/README
@@ -1,4 +1,4 @@
-Папка для скомпилированных стилей. Файлы препроцессоров держите в другой папке. Например, для *.less используйте папку less, для *.scss используйте папку sass и так далее.
+Папка для скомпилированных стилей. Файлы препроцессоров держите в другой папке. Например, для *.less используйте папку less, для *.scss используйте папку sass.
 
 Скомпилированные CSS-файлы не отправляйте в репозиторий. В репозитории должны быть только файлы препроцессора.
 
@@ -14,6 +14,3 @@ less/
 sass/
 | - style.scss
 | - [другие *.scss файлы]
-postcss/
-| - style.css
-| - [другие *.css файлы]
